<?xml version="1.0" encoding="utf-8"?>
<androidx.drawerlayout.widget.DrawerLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/drawer_layout_filter"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:openDrawer="start">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <include
            android:id="@+id/list_toolbar"
            layout="@layout/activity_list_toolbar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent" />

        <androidx.core.widget.NestedScrollView
            android:id="@+id/scrollViewFilterContent"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:fillViewport="true"
            app:layout_constraintTop_toBottomOf="@id/list_toolbar"
            app:layout_constraintBottom_toTopOf="@id/buttonSendFilter"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:padding="16dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/points_of_interest_title"
                    android:textSize="16sp"
                    android:textStyle="bold"
                    android:layout_marginBottom="8dp"
                    android:textColor="@color/black"/>

                <com.google.android.material.chip.ChipGroup
                    android:id="@+id/chipGroupFilter"
                    android:layout_width="match_parent" android:layout_height="wrap_content"
                    android:layout_marginTop="16dp" app:chipSpacingHorizontal="8dp" app:singleSelection="false">

                    <com.google.android.material.chip.Chip
                        android:id="@+id/chipSchoolFilter"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:checkable="true"
                        android:text="School"
                        android:theme="@style/Theme.MaterialComponents.Light" />

                    <com.google.android.material.chip.Chip
                        android:id="@+id/chipMarketFilter"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:checkable="true"
                        android:text="Market"
                        android:theme="@style/Theme.MaterialComponents.Light" />

                    <com.google.android.material.chip.Chip
                        android:id="@+id/chipParkFilter"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:checkable="true"
                        android:text="Park"
                        android:theme="@style/Theme.MaterialComponents.Light" />
                </com.google.android.material.chip.ChipGroup>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/price_range_title"
                    android:textSize="16sp"
                    android:textStyle="bold"
                    android:layout_marginTop="24dp"
                    android:layout_marginBottom="8dp"
                    android:textColor="@color/black"/>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:gravity="center">

                    <com.google.android.material.textfield.TextInputLayout
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:layout_marginEnd="8dp"
                        app:boxBackgroundColor="@android:color/transparent"
                        app:boxBackgroundMode="outline"
                        app:boxCornerRadiusBottomEnd="10dp"
                        app:boxCornerRadiusBottomStart="10dp"
                        app:boxCornerRadiusTopEnd="10dp"
                        app:boxCornerRadiusTopStart="10dp">

                        <com.google.android.material.textfield.TextInputEditText
                            android:id="@+id/price_min"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:hint="@string/price_min"
                            android:inputType="numberDecimal"
                            android:textColor="@color/black" />

                    </com.google.android.material.textfield.TextInputLayout>

                    <com.google.android.material.textfield.TextInputLayout
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        app:boxBackgroundColor="@android:color/transparent"
                        app:boxBackgroundMode="outline"
                        app:boxCornerRadiusBottomEnd="10dp"
                        app:boxCornerRadiusBottomStart="10dp"
                        app:boxCornerRadiusTopEnd="10dp"
                        app:boxCornerRadiusTopStart="10dp">

                        <com.google.android.material.textfield.TextInputEditText
                            android:id="@+id/price_max"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:hint="@string/price_max"
                            android:inputType="numberDecimal"
                            android:textColor="@color/black" />

                    </com.google.android.material.textfield.TextInputLayout>
                </LinearLayout>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/property_type_title"
                    android:textSize="16sp"
                    android:textStyle="bold"
                    android:layout_marginTop="24dp"
                    android:layout_marginBottom="8dp"
                    android:textColor="@color/black"/>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:gravity="center">

                    <Spinner
                        android:id="@+id/spinner_filter_type"
                        android:layout_width="236dp"
                        android:layout_height="42dp"
                        android:spinnerMode="dialog"
                        android:background="@drawable/bg_spinner_type"
                        tools:listitem="@android:layout/simple_spinner_item" />
                </LinearLayout>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/number_of_rooms_title"
                    android:textSize="16sp"
                    android:textStyle="bold"
                    android:layout_marginTop="24dp"
                    android:layout_marginBottom="8dp"
                    android:textColor="@color/black"/>

                <LinearLayout
                    android:id="@+id/layout_number_pieces"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:orientation="horizontal">

                    <Spinner
                        android:id="@+id/spinner_filter_number_pieces"
                        android:layout_width="236dp"
                        android:layout_height="42dp"
                        android:spinnerMode="dialog"
                        android:background="@drawable/bg_spinner_type"
                        tools:listitem="@android:layout/simple_spinner_item" />
                </LinearLayout>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/surface_area_title"
                    android:textSize="16sp"
                    android:textStyle="bold"
                    android:layout_marginTop="24dp"
                    android:layout_marginBottom="8dp"
                    android:textColor="@color/black"/>

                <LinearLayout
                    android:id="@+id/layout_filter_surface"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:orientation="horizontal">

                    <ImageView
                        android:id="@+id/icon_surface"
                        android:layout_width="47dp"
                        android:layout_height="40dp"
                        android:layout_gravity="center"
                        android:layout_marginEnd="8dp"
                        android:src="@drawable/ic_surface"
                        android:contentDescription="@string/surface_icon_desc" />

                    <com.google.android.material.textfield.TextInputLayout
                        android:layout_width="100dp"
                        android:layout_height="wrap_content"
                        android:layout_marginEnd="5dp"
                        app:boxBackgroundColor="@android:color/transparent"
                        app:boxBackgroundMode="outline"
                        app:boxCornerRadiusBottomEnd="10dp"
                        app:boxCornerRadiusBottomStart="10dp"
                        app:boxCornerRadiusTopEnd="10dp"
                        app:boxCornerRadiusTopStart="10dp">

                        <com.google.android.material.textfield.TextInputEditText
                            android:id="@+id/surface_filter"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:hint="@string/Surface_min"
                            android:inputType="numberDecimal"
                            android:textColor="@color/black" />

                    </com.google.android.material.textfield.TextInputLayout>
                </LinearLayout>
            </LinearLayout>
        </androidx.core.widget.NestedScrollView>

        <Button
            android:id="@+id/buttonSendFilter"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp"
            android:layout_marginBottom="16dp"
            android:text="@string/send_filter_button"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <com.google.android.material.navigation.NavigationView
        android:id="@+id/nav_view_filter"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:layout_gravity="start"
        app:layout_constraintStart_toStartOf="parent"
        app:menu="@menu/navigation_menu" />

</androidx.drawerlayout.widget.DrawerLayout>