<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <Button
        android:id="@+id/button_back"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:text="Back"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:fillViewport="true"
        android:layout_marginTop="16dp"
        app:layout_constraintTop_toBottomOf="@+id/button_back"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">

        <LinearLayout
            android:id="@+id/linearLayout_right"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="16dp"> <Spinner
            android:id="@+id/spinnerType"
            android:layout_width="match_parent" android:layout_height="wrap_content"
            android:minHeight="48dp" android:layout_gravity="center_horizontal"
            android:layout_marginBottom="16dp" android:background="@drawable/bg_spinner_type"
            tools:listitem="@android:layout/simple_spinner_item" />

            <LinearLayout
                android:id="@+id/layout_address"
                android:layout_width="match_parent" android:layout_height="wrap_content"
                android:gravity="center_vertical" android:orientation="horizontal"
                android:layout_marginBottom="16dp">

                <ImageView
                    android:id="@+id/icon_address"
                    android:layout_width="36dp" android:layout_height="36dp"
                    android:layout_marginEnd="8dp" android:src="@drawable/ic_map"
                    android:contentDescription="@string/icon_map_desc"/>

                <com.google.android.material.textfield.TextInputLayout
                    android:layout_width="0dp" android:layout_height="wrap_content"
                    android:layout_weight="1"
                    app:boxBackgroundColor="@android:color/transparent"
                    app:boxBackgroundMode="outline"
                    app:boxCornerRadiusBottomEnd="10dp"
                    app:boxCornerRadiusBottomStart="10dp"
                    app:boxCornerRadiusTopEnd="10dp"
                    app:boxCornerRadiusTopStart="10dp">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/textPostalAddress"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/Address"
                        android:textColor="@color/black" />

                </com.google.android.material.textfield.TextInputLayout>
            </LinearLayout>

            <LinearLayout
                android:id="@+id/layout_surface"
                android:layout_width="match_parent" android:layout_height="wrap_content"
                android:gravity="center_vertical"
                android:orientation="horizontal"
                android:layout_marginBottom="16dp">

                <ImageView
                    android:id="@+id/icon_surface"
                    android:layout_width="36dp" android:layout_height="36dp"
                    android:layout_marginEnd="8dp"
                    android:src="@drawable/ic_surface"
                    android:contentDescription="@string/icon_surface_desc"/>

                <com.google.android.material.textfield.TextInputLayout
                    android:layout_width="0dp" android:layout_height="wrap_content"
                    android:layout_weight="1"
                    app:boxBackgroundColor="@android:color/transparent"
                    app:boxBackgroundMode="outline"
                    app:boxCornerRadiusBottomEnd="10dp"
                    app:boxCornerRadiusBottomStart="10dp"
                    app:boxCornerRadiusTopEnd="10dp"
                    app:boxCornerRadiusTopStart="10dp">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/textSurface"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:inputType="number"
                        android:hint="@string/Surface"
                        android:textColor="@color/black" />

                </com.google.android.material.textfield.TextInputLayout>
            </LinearLayout>

            <LinearLayout
                android:id="@+id/layout_price"
                android:layout_width="match_parent" android:layout_height="wrap_content"
                android:gravity="center_vertical"
                android:orientation="horizontal"
                android:layout_marginBottom="16dp">

                <ImageView
                    android:id="@+id/icon_price"
                    android:layout_width="36dp" android:layout_height="36dp"
                    android:layout_marginEnd="8dp"
                    android:src="@drawable/ic_price"
                    android:contentDescription="@string/icon_price_desc"/>

                <com.google.android.material.textfield.TextInputLayout
                    android:layout_width="0dp" android:layout_height="wrap_content"
                    android:layout_weight="1"
                    app:boxBackgroundColor="@android:color/transparent"
                    app:boxBackgroundMode="outline"
                    app:boxCornerRadiusBottomEnd="10dp"
                    app:boxCornerRadiusBottomStart="10dp"
                    app:boxCornerRadiusTopEnd="10dp"
                    app:boxCornerRadiusTopStart="10dp">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/textPrice"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:inputType="numberDecimal"
                        android:hint="@string/Price"
                        android:textColor="@color/black" />

                </com.google.android.material.textfield.TextInputLayout>
            </LinearLayout>

            <LinearLayout
                android:id="@+id/layout_description"
                android:layout_width="match_parent" android:layout_height="wrap_content"
                android:gravity="center_vertical"
                android:orientation="horizontal"
                android:layout_marginBottom="16dp">

                <ImageView
                    android:id="@+id/icon_description"
                    android:layout_width="36dp" android:layout_height="36dp"
                    android:layout_marginEnd="8dp"
                    android:src="@drawable/ic_description"
                    android:contentDescription="@string/icon_description_desc"/>

                <com.google.android.material.textfield.TextInputLayout
                    android:layout_width="0dp" android:layout_height="wrap_content"
                    android:layout_weight="1"
                    app:boxBackgroundColor="@android:color/transparent"
                    app:boxBackgroundMode="outline"
                    app:boxCornerRadiusBottomEnd="10dp"
                    app:boxCornerRadiusBottomStart="10dp"
                    app:boxCornerRadiusTopEnd="10dp"
                    app:boxCornerRadiusTopStart="10dp">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/textDescription"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/Description"
                        android:inputType="textMultiLine" android:minLines="3" android:gravity="top|start" android:textColor="@color/black" />

                </com.google.android.material.textfield.TextInputLayout>
            </LinearLayout>

            <Spinner
                android:id="@+id/spinnerStatus"
                android:layout_width="match_parent" android:layout_height="wrap_content"
                android:minHeight="48dp"
                android:layout_gravity="center_horizontal"
                android:layout_marginBottom="16dp"
                android:background="@drawable/bg_spinner_type"
                tools:listitem="@android:layout/simple_spinner_item"/>

            <LinearLayout
                android:id="@+id/layout_date"
                android:layout_width="match_parent" android:layout_height="wrap_content"
                android:gravity="center_vertical"
                android:orientation="horizontal"
                android:layout_marginBottom="16dp">

                <ImageView
                    android:id="@+id/icon_date"
                    android:layout_width="36dp" android:layout_height="36dp"
                    android:layout_marginEnd="8dp"
                    android:src="@drawable/ic_date"
                    android:contentDescription="@string/icon_date_desc"/>

                <TextView
                    android:id="@+id/textAddressAddOnMarket"
                    android:layout_width="0dp" android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:minHeight="48dp"
                    android:gravity="center_vertical" android:paddingStart="12dp"
                    android:paddingEnd="12dp"
                    android:text="@string/click_to_select_date"
                    android:background="@drawable/bg_text_input_outline" android:textColor="@color/black"
                    tools:text="15/03/2023" />

            </LinearLayout>

            <Spinner
                android:id="@+id/spinnerAgent"
                android:layout_width="match_parent" android:layout_height="wrap_content"
                android:minHeight="48dp"
                android:layout_gravity="center_horizontal"
                android:layout_marginBottom="16dp"
                android:background="@drawable/bg_spinner_type"
                tools:listitem="@android:layout/simple_spinner_item"/>

            <Spinner
                android:id="@+id/spinnerNumberPieces"
                android:layout_width="match_parent" android:layout_height="wrap_content"
                android:minHeight="48dp"
                android:layout_gravity="center_horizontal"
                android:layout_marginBottom="16dp"
                android:background="@drawable/bg_spinner_type"
                tools:listitem="@android:layout/simple_spinner_item"/>

            <com.google.android.material.chip.ChipGroup
                android:id="@+id/chipGroupInterest"
                android:layout_width="match_parent" android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginBottom="16dp"
                app:chipSpacingHorizontal="8dp" app:singleSelection="false"> <com.google.android.material.chip.Chip
                android:id="@+id/chipSchool"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:checkable="true"
                android:text="School"
                android:theme="@style/Theme.MaterialComponents.Light" />

                <com.google.android.material.chip.Chip
                    android:id="@+id/chipMarket"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:checkable="true"
                    android:text="Market"
                    android:theme="@style/Theme.MaterialComponents.Light" />

                <com.google.android.material.chip.Chip
                    android:id="@+id/chipPark"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:checkable="true"
                    android:text="Park"
                    android:theme="@style/Theme.MaterialComponents.Light" />
            </com.google.android.material.chip.ChipGroup>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_vertical"
                android:orientation="horizontal"
                android:layout_marginBottom="16dp">

                <com.google.android.material.textfield.TextInputLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:layout_marginEnd="8dp"
                    app:boxBackgroundColor="@android:color/transparent"
                    app:boxBackgroundMode="outline"
                    app:boxCornerRadiusBottomEnd="10dp"
                    app:boxCornerRadiusBottomStart="10dp"
                    app:boxCornerRadiusTopEnd="10dp"
                    app:boxCornerRadiusTopStart="10dp">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/textLatitude"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/Latitude"
                        android:inputType="numberDecimal|numberSigned" android:textColor="@color/black" />

                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    app:boxBackgroundColor="@android:color/transparent"
                    app:boxBackgroundMode="outline"
                    app:boxCornerRadiusBottomEnd="10dp"
                    app:boxCornerRadiusBottomStart="10dp"
                    app:boxCornerRadiusTopEnd="10dp"
                    app:boxCornerRadiusTopStart="10dp">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/textLongitude"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/Lng"
                        android:inputType="numberDecimal|numberSigned" android:textColor="@color/black" />

                </com.google.android.material.textfield.TextInputLayout>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_vertical"
                android:orientation="horizontal"
                android:layout_marginBottom="24dp"> <ImageView
                android:id="@+id/icon_image_app"
                android:layout_width="36dp" android:layout_height="36dp"
                android:layout_marginEnd="8dp"
                android:src="@drawable/ic_image_placeholder" android:contentDescription="@string/icon_image_add_desc"/>

                <Button
                    android:id="@+id/button_add_photo"
                    android:layout_width="0dp" android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:minHeight="48dp"
                    android:text="Add Picture" />
            </LinearLayout>

            <Button
                android:id="@+id/buttonUpdateData"
                android:layout_width="match_parent" android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:text="Update" />

        </LinearLayout>
    </androidx.core.widget.NestedScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>